# paddle-ocr-rv1126b

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
deploy/: S96ppocrd
scripts/: build_deploy_from_windows.ps1  build_deploy_ubuntu.sh  run_board.ps1  sync_to_ubuntu.ps1
src/: ppocr_text.cc
tools/: convert_rv1126b.ps1  prepare_model_zoo_demo.ps1
